# gpx-rust

./: COPYING  Cargo.toml  README.md
gpx-rust/: Cargo.toml  build.rs
gpx-rust/examples/: gpxreader.rs  make_serialize.rs  resave.rs
gpx-rust/src/: conv.rs  generator.rs  gpx.rs  lib.rs  par.rs  parsers.rs  ser.rs  xml.rs  xsd.rs
gpx-rust/src/gpx/: conv.rs  mod.rs  par.rs  ser.rs  ser_auto.rs
gpx-rust/src/xml/: conv.rs  mod.rs  par.rs  ser.rs
gpx_debug/: Cargo.toml
gpx_debug/src/: lib.rs
xml_parsergen/: Cargo.toml
xml_parsergen/examples/: gpx.rs
xml_parsergen/src/: gpx.rs  lib.rs  xsd.rs  xsd_types.rs
