[package]
name = "gpx_rust"
version = "0.0.1"
authors = [ "rhn <gihu.rhn@porcupinefactory.org>" ]

[dependencies]
xml-rs = "0.3"
macro-attr = "^0.2.0"
chrono = "0.2"
clap = "2"
#num = "0.1"
gpx_debug = { path = "../gpx_debug" }
#context = "^1.0" # use fringe or native yield when available
#crossbeam = "^0.2"
quote = "^0.3.8"

[dependencies.fringe]
version = "^1.2.1"
default-features = false
