[package]
name = "gpx_rust"
version = "0.0.1"
authors = [ "rhn <gihu.rhn@porcupinefactory.org>" ]
build = "build.rs"

[dependencies]
xml-rs = "^0.4"
macro-attr = "^0.2.0"
chrono = "0.2"
clap = "2"
geo = "^0.4.0"
gpx_debug = { path = "../gpx_debug" }

[build-dependencies]
xml_parsergen = { path = "../xml_parsergen" }
